---
source: crates/criticalup-cli/tests/cli/init.rs
expression: repr
---
exit: exit status: 0

stdout
------
manifest-version = 1

[products.ferrocene]
release = "the-amazing-ferrocene-release"
packages = [
    "cargo-${rustc-host}",
    "rustc-${rustc-host}",
    "clippy-${rustc-host}",
    "rust-std-${rustc-host}",
    "rustfmt-${rustc-host}",
    "rust-src",
]

------

empty stderr
